--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Flask==2.3.2
-opencv-python-headless==4.10.0.0
+opencv-python-headless==4.10.0.82
 numpy==1.24.4
 scikit-learn==1.3.0
 requests==2.31.0
-matplotlib==3.8.0  # Adjust the version if necessary
+matplotlib==3.7.1
